@@ -117,14 +117,6 @@
                         <arg>javafx.graphics/com.sun.javafx.embed=javafx.swt</arg>
                         <arg>--add-exports</arg>
                         <arg>javafx.graphics/com.sun.javafx.stage=javafx.swt</arg>
-                        <arg>--add-modules</arg>
-                        <arg>org.eclipse.swt.dnd</arg>
-                        <arg>--add-modules</arg>
-                        <arg>org.eclipse.swt.events</arg>
-                        <arg>--add-modules</arg>
-                        <arg>org.eclipse.swt.graphics</arg>
-                        <arg>--add-modules</arg>
-                        <arg>org.eclipse.swt.widgets</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
